force-app/main/default/objects/PF_Epic__c/PF_Epic__c.object-meta.xml
<CustomObject>
    <description>This is where project epics will be captured within the ProjectForce application.</description>
    <label>Customer Journey</label>
    <nameField>
        <label>CJ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Journeys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>