force-app/main/default/objects/PF_Epic__c/fields/PF_Epic_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Epic_Description__c</fullName>
    <inlineHelpText>Provide a brief description of the Customer Journey.</inlineHelpText>
    <label>CJ Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>