force-app/main/default/objects/PF_Epic__c/fields/PF_FW_Capability__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Capability__c</fullName>
    <label>Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Car Matches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>