force-app/main/default/objects/PF_Epic__c/fields/PF_FW_CJ_Strategic_Theme__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CJ_Strategic_Theme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Theme</label>
    <type>Checkbox</type>
</CustomField>