force-app/main/default/objects/PF_Epic__c/fields/PF_FW_CRM__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CRM__c</fullName>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM1</fullName>
            </value>
            <value>
                <fullName>CRM2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>