force-app/main/default/objects/PF_Epic__c/listViews/PF_All.listView-meta.xml
<ListView>
    <fullName>PF_All</fullName>
    <columns>PF_Epic_Number__c</columns>
    <columns>PF_FW_Customer_Experience__c</columns>
    <columns>NAME</columns>
    <columns>PF_Epic_Description__c</columns>
    <columns>PF_FW_Evolution_Version__c</columns>
    <columns>PF_FW_CJ_Estimated_Hours__c</columns>
    <columns>PF_FW_Capability__c</columns>
    <columns>PF_FW_Cloud__c</columns>
    <columns>PF_FW_CJ_Foundation_Feature__c</columns>
    <columns>PF_FW_CRM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PF_FW_Capability__c</field>
        <operation>equals</operation>
        <value>Dealer Inventive</value>
    </filters>
    <label>All</label>
</ListView>